--- a/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
+++ b/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseInterfazBE.cs" />
     <Compile Include="TipoInterfazBE.cs" />
     <Compile Include="InterfazExpedicionesBE.cs" />
     <Compile Include="InterfazPrefacturasBE.cs" />
