--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -1,21 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
-  <configSections>
-    <section name="dataConfiguration"
-      type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data"
-      requirePermission="true"/>
-  </configSections>
 
-  <dataConfiguration defaultDatabase="ExampleDatabase"/>
-
-  <connectionStrings>
-    <add name="ExampleDatabase" connectionString="Data Source=10.7.2.251;Initial Catalog=SuplacorpDB;User Id=sa;Password=S8p5A2o7P"
-      providerName="System.Data.SqlClient" />
-
-    <add name="AsyncExampleDatabase" connectionString="..."
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <appSettings>
+    <add key="ruta_sftp" value="Y:\"/>
+  </appSettings>
   
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
