--- a/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
+++ b/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
@@ -40,16 +40,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseInterfazBE.cs" />
+    <Compile Include="Registro_Cabecera\BaseInterfaz_RegCabBE.cs" />
+    <Compile Include="Registro_Cabecera\InterfazExpediciones_RegCabBE.cs" />
+    <Compile Include="Registro_Cabecera\InterfazPrefacturas_RegCabBE.cs" />
+    <Compile Include="Registro_Cabecera\InterfazSuministros_RegCabBE.cs" />
+    <Compile Include="Registro_Inicial\BaseInterfaz_RegIniBE.cs" />
+    <Compile Include="Registro_Posicion\BaseInterfaz_RegPosBE.cs" />
+    <Compile Include="Registro_Posicion\InterfazExpediciones_RegPosBE.cs" />
+    <Compile Include="Registro_Posicion\InterfazPrefacturas_RegPosBE.cs" />
+    <Compile Include="Registro_Proceso\InterfazReferencias_RegProcBE.cs" />
+    <Compile Include="Registro_Posicion\InterfazSuministros_RegPosBE.cs" />
     <Compile Include="TipoInterfazBE.cs" />
-    <Compile Include="InterfazExpedicionesBE.cs" />
-    <Compile Include="InterfazPrefacturasBE.cs" />
-    <Compile Include="InterfazReferenciasBE.cs" />
-    <Compile Include="InterfazSuministrosBE.cs" />
+    <Compile Include="Registro_Inicial\InterfazExpediciones_RegIniBE.cs" />
+    <Compile Include="Registro_Inicial\InterfazPrefacturas_RegIniBE.cs" />
+    <Compile Include="Registro_Inicial\InterfazReferencias_RegIniBE.cs" />
+    <Compile Include="Registro_Inicial\InterfazSuministros_RegIniBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoRegistroBE.cs" />
     <Compile Include="ValidacionInterfazBE.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
