--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -4,6 +4,12 @@
 
   <appSettings>
     <add key="ruta_sftp" value="Y:\"/>
+
+    <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias"/>
+    <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones"/>
+    <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas"/>
+    <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros"/>
+
   </appSettings>
   
     <startup> 
