--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -3,8 +3,9 @@
 
 
   <appSettings>
-    <add key="ruta_sftp" value="Y:\"/>
-
+    <!--<add key="ruta_sftp" value="Y:\"/>-->
+    <add key="ruta_sftp" value="D:\Test\"/>
+      
     <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias"/>
     <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones"/>
     <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas"/>
