--- a/Suplacorp.GPS.BL/Suplacorp.GPS.BL.csproj
+++ b/Suplacorp.GPS.BL/Suplacorp.GPS.BL.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BaseBL.cs" />
     <Compile Include="IInterfazRegCabBL.cs" />
     <Compile Include="IInterfazRegIniBL.cs" />
+    <Compile Include="IInterfazRegPosBL.cs" />
     <Compile Include="Suministros\InterfazSuministrosBL.cs" />
     <Compile Include="Referencias\InterfazReferenciasBL.cs" />
     <Compile Include="ValidacionInterfazBL.cs" />
