--- a/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
+++ b/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseInterfaces\BaseInterfaz_RegCabBE.cs" />
+    <Compile Include="Expediciones\InterfazExpediciones_ExpedicionBE.cs" />
     <Compile Include="Expediciones\InterfazExpediciones_RegCabBE.cs" />
     <Compile Include="Prefacturas\InterfazPrefacturas_RegCabBE.cs" />
     <Compile Include="Suministros\InterfazSuministros_PedidoBE.cs" />
