--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -9,6 +9,8 @@
     <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\"/>
     <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas\"/>
     <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros\"/>
+    <add key="ruta_fichero_detino_LogExp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\LogExternoExpediciones\"/>
+  
 
   </appSettings>
   
