--- a/Suplacorp.GPS.DAL/Suplacorp.GPS.DAL.csproj
+++ b/Suplacorp.GPS.DAL/Suplacorp.GPS.DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DAL.cs" />
     <Compile Include="Expediciones\InterfazExpedicionesDAL.cs" />
     <Compile Include="IInterfazRegIniDAL.cs" />
+    <Compile Include="Prefactura\InterfazPrefacturaDAL.cs" />
     <Compile Include="Referencias\InterfazReferenciasDAL.cs" />
     <Compile Include="Suministros\InterfazSuministrosDAL.cs" />
     <Compile Include="ValidacionInterfazDAL.cs" />
