--- a/Suplacorp.GPS.BL/Suplacorp.GPS.BL.csproj
+++ b/Suplacorp.GPS.BL/Suplacorp.GPS.BL.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Interop.DSOFile">
+      <HintPath>..\BBVA_GPS_InterfacesAutomaticas\bin\Debug\Interop.DSOFile.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
