--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -3,18 +3,25 @@
 
 
   <appSettings>
+    <!-- DESARROLLO -->
+    <!--
     <add key="ruta_sftp" value="Y:\"/>
-
+    -->
+    
+    <!-- PRODUCCIÓN -->
+    <!---->
+    <add key="ruta_sftp" value="Z:\"/>
+    
+    
     <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias\"/>
     <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\"/>
     <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas\"/>
     <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros\"/>
     <add key="ruta_fichero_detino_LogExp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\LogExternoExpediciones\"/>
   
-
   </appSettings>
-  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 </configuration>
+
