--- a/BBVA_GPS_InterfazExpediciones/App.config
+++ b/BBVA_GPS_InterfazExpediciones/App.config
@@ -3,7 +3,15 @@
 
 
   <appSettings>
+    <!-- DESARROLLO -->
+    <!--
     <add key="ruta_sftp" value="Y:\"/>
+    -->
+    
+    <!-- PRODUCCIÓN -->
+    <!---->
+    <add key="ruta_sftp" value="Z:\"/>
+
 
     <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias\"/>
     <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\"/>
