--- a/BBVA_GPS_InterfazExpediciones_VACIAS/BBVA_GPS_InterfazExpediciones_VACIAS.csproj
+++ b/BBVA_GPS_InterfazExpediciones_VACIAS/BBVA_GPS_InterfazExpediciones_VACIAS.csproj
@@ -49,6 +49,20 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Suplacorp.GPS.BE\Suplacorp.GPS.BE.csproj">
+      <Project>{032aecaf-ee90-4828-8158-f9b96e4338d1}</Project>
+      <Name>Suplacorp.GPS.BE</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Suplacorp.GPS.BL\Suplacorp.GPS.BL.csproj">
+      <Project>{4ea56c35-03b1-4a01-934c-88acb823db94}</Project>
+      <Name>Suplacorp.GPS.BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Suplacorp.GPS.Utils\Suplacorp.GPS.Utils.vbproj">
+      <Project>{856b3af3-475c-4de8-9b59-b27280e8b2af}</Project>
+      <Name>Suplacorp.GPS.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
