--- a/BBVA_GPS_InterfazExpediciones/App.config
+++ b/BBVA_GPS_InterfazExpediciones/App.config
@@ -1,27 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-
   <appSettings>
     <!-- DESARROLLO -->
     <!--
     <add key="ruta_sftp" value="Y:\"/>
     -->
-
     <!-- PRODUCCIÓN -->
     <!---->
-    <add key="ruta_sftp" value="Z:\"/>
-    
-    <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias\"/>
-    <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\"/>
-    <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas\"/>
-    <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros\"/>
-    <add key="ruta_fichero_detino_LogExp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\LogExternoExpediciones\"/>
-
-
+    <add key="ruta_sftp" value="Z:\" />
+    <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias\" />
+    <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\" />
+    <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas\" />
+    <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros\" />
+    <add key="ruta_fichero_detino_LogExp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\LogExternoExpediciones\" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
