--- a/BBVA_GPS_InterfacesAutomaticas/App.config
+++ b/BBVA_GPS_InterfacesAutomaticas/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
 
@@ -20,7 +20,6 @@
   
   </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 </configuration>
-
