--- a/BBVA_GPS_InterfazExpediciones_URGENTES/App.config
+++ b/BBVA_GPS_InterfazExpediciones_URGENTES/App.config
@@ -1,6 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+
+
+  <appSettings>
+    <!-- DESARROLLO -->
+    <!--
+    <add key="ruta_sftp" value="Y:\"/>
+    -->
+
+    <!-- PRODUCCIÓN -->
+    <!---->
+    <add key="ruta_sftp" value="Z:\"/>
+
+    <add key="ruta_fichero_detino_Ref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Referencias\"/>
+    <add key="ruta_fichero_detino_Exp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Expediciones\"/>
+    <add key="ruta_fichero_detino_Pref" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Prefacturas\"/>
+    <add key="ruta_fichero_detino_Sum" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\Suministros\"/>
+    <add key="ruta_fichero_detino_LogExp" value="D:\Suplacorp\InterfacesImportadas_BBVA_GPS\LogExternoExpediciones\"/>
+
+
+  </appSettings>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
 </configuration>
