--- a/BBVA_GPS_InterfazExpediciones_VACIAS/BBVA_GPS_InterfazExpediciones_VACIAS.csproj
+++ b/BBVA_GPS_InterfazExpediciones_VACIAS/BBVA_GPS_InterfazExpediciones_VACIAS.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BBVA_GPS_InterfazExpediciones_VACIAS</RootNamespace>
     <AssemblyName>BBVA_GPS_InterfazExpediciones_VACIAS</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
