--- a/BBVA_GPS_MonitorInterfacesAutomaticas/App.config
+++ b/BBVA_GPS_MonitorInterfacesAutomaticas/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
 
@@ -22,6 +22,6 @@
   </appSettings>
 
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
 </configuration>
