--- a/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
+++ b/Suplacorp.GPS.BE/Suplacorp.GPS.BE.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Suplacorp.GPS.BE</RootNamespace>
     <AssemblyName>Suplacorp.GPS.BE</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
