--- a/Suplacorp.GPS.DAL/packages.config
+++ b/Suplacorp.GPS.DAL/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
-  <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net452" />
-  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net40" />
+  <package id="EnterpriseLibrary.Data" version="5.0.505.0" targetFramework="net40" />
+  <package id="EnterpriseLibrary.Logging" version="5.0.505.1" targetFramework="net40" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net40" />
+  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net40" />
 </packages>
